# Genu-Fi

./: .gitignore  README.md
.github/workflows/: backend.yml  contracts.yml  frontend.yml
backend/: .env.example  package-lock.json  package.json  server.js
backend/config/: database.js
backend/controllers/: README.md
backend/middleware/: errorHandler.js
backend/models/: Credential.js  Institution.js  Reputation.js  VerificationRequest.js
backend/routes/: credentials.js  events.js  institutions.js  reputation.js  verification.js
backend/services/: eventService.js  stellarService.js
backend/tests/: credentials.test.js  institutions.test.js  reputation.test.js
contracts/: Cargo.toml
contracts/credential-registry/: Cargo.toml
contracts/credential-registry/src/: lib.rs
contracts/institution-registry/: Cargo.toml
contracts/institution-registry/src/: events.rs  lib.rs  storage.rs  tests.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs
contracts/scripts/: deploy.sh
contracts/verification/: Cargo.toml
contracts/verification/src/: lib.rs
docs/: architecture.md  contracts.md  deployment.md  events.md  testing.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: About.tsx  ActivityFeed.tsx  ErrorBoundary.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  InstitutionCard.tsx  LaptopIllustration.tsx  LoadingSpinner.tsx  Partners.tsx  ReputationScore.tsx  RotatingCube.tsx  SkillPassport.tsx  Stats.tsx  (+2 more)
(+13 files in other folders)
